--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ They provide a platform to portray and build various personality traits that wil
 <p>HOD.of Electronics & computer maintenance</p>
 </div>
 <div class="desc">
-  <h3>Event Co ordinators</h3>
+  <h3>stuff Co ordinators</h3>
   <p class="event-cor">
 MRS.M.Anusha <br>
 MR.M.S.J.D.prasad <br>
