--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
      <h3 style="color-text": white; class="power">UNLOCK THE POWER </h3>
      
   </div>
+    <h1>HEAD OF THE EVENT</h1>
   <div style="display: flex; justify-content: center;" >
     <div class="event-date">
     <p class="date"> save the date </p>
